# hyper-client-pool

./: .travis.yml  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  docker-compose.yaml
.circleci/: config.yml
script/: travis.sh
src/: body_type.rs  client.rs  config.rs  counter.rs  deliverable.rs  delivery_result.rs  dispatcher.rs  error.rs  executor.rs  lib.old.rs  lib.rs  pool.rs  stats.rs  transaction.rs
src/executor/: mod.rs  transaction_counter.rs
src/pool/: builder.rs  mod.rs
src/util/: mod.rs  rwlockext.rs
tests/: lib.rs
